	(twittering-make-header-info-alist): update the regexp.
	(twittering-pre-process-buffer-curl): likewise.
	(twittering-oauth-get-response-alist): likewise.

	* twittering-mode.el: Fix regular expressions including a literal
	period ".".
	(twittering-make-header-info-alist): fix a regexp.
	(twittering-pre-process-buffer-curl): likewise.
	(twittering-oauth-get-response-alist): likewise.

2016-06-17  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: You can retweet your own tweets.
	(twittering-native-retweet): retweet the given tweet without
	regard to its author.

2016-03-14  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Render an ampersand as it is posted. An
	ampersand "&" in a posted tweet is encoded to "&amp;" in the
	corresponding JSON object. The current version of twittering-mode
	decodes it to "&" on rendering the tweet.
	(twittering-make-gap-list): support a gap generated by an
	ampersand in a text.
	(twittering-decode-html-entities): decode a character entity
	reference for the ampersand "&".
	(twittering-extract-common-element-from-json): decode character
	entity references in a text of the given tweet.

	* twittering-mode.el: Fix decoding of a text in XML objects.
	(twittering-normalize-raw-status): decode character entity
	references in a text.

2016-03-13  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Initialize the mode-line on generating the
	edit buffer.
	(twittering-update-status-from-pop-up-buffer): call the function
	`twittering-edit-length-check' to initialize the mode-line.

	* twittering-mode.el: Update the default value of the service
	configuration.
	(twittering-service-configuration-default): update the default
	value.

	* twittering-mode.el: Update the maximum length of a direct
	message.
	(twittering-service-configuration-default): add the default value
	of the maximum length of a direct message.
	(twittering-update-service-configuration-sentinel): retrieve the
	value of `dm_text_character_limit'.