@@ -13,6 +13,13 @@
 	(twittering-pre-process-buffer-curl): likewise.
 	(twittering-oauth-get-response-alist): likewise.
 
+	* twittering-mode.el: Accept HTTP responses generated by old
+	versions of curl. The regular expressions of HTTP responses are
+	updated so that they match headers starting with "HTTP/2.0".
+	(twittering-make-header-info-alist): update the regexp.
+	(twittering-pre-process-buffer-curl): likewise.
+	(twittering-oauth-get-response-alist): likewise.
+
 2016-06-17  Tadashi MATSUO  <tad@mymail.twin.jp>
 
 	* twittering-mode.el: You can retweet your own tweets.
